testsuite/tests/typecheck/should_fail/TyAppPat_ScopedTyVarConflict.stderr

TyAppPat_ScopedTyVarConflict.hs:10:6: error:
    Type variable ‘a’ would be inappropriately shadowed.

TyAppPat_ScopedTyVarConflict.hs:11:6: error:
    Type variable ‘a’ would be inappropriately shadowed.
